# Blaze

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE.txt  README.md  build.sh  run.sh
Blaze/: Blaze.cpp  Blaze.h  Blaze.hpp  Blaze2.cpp  CMakeLists.txt  Camera.hpp  Context.cpp  Context.hpp  Datatypes.hpp  Drawable.hpp  GUI.cpp  GUI.hpp  LightSystem.cpp  LightSystem.hpp  Model.cpp  Model.hpp  Primitives.cpp  Primitives.hpp  Renderer.cpp  Renderer.hpp  ShadowCaster.cpp  ShadowCaster.hpp  Source.cpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  TextureCube.cpp  TextureCube.hpp  UniformBuffer.cpp  UniformBuffer.hpp  Version.src  VertexBuffer.cpp  VertexBuffer.hpp
Blaze/assets/PaperMill_Ruins_E/: PaperMill_E_Env.hdr  PaperMill_Ruins_E.ibl
Blaze/assets/Walk_Of_Fame/: Mans_Outside_Env.hdr  Walk_Of_Fame.ibl
Blaze/core/: Bindable.hpp  CMakeLists.txt  Camera.hpp  Context.cpp  Context.hpp  Drawable.hpp  Pipeline.hpp  StorageBuffer.cpp  StorageBuffer.hpp  Swapchain.cpp  Swapchain.hpp  Texture2D.cpp  Texture2D.hpp  TextureCube.cpp  TextureCube.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Blaze/drawables/: CMakeLists.txt  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Model2.cpp  Model2.hpp  ModelLoader.cpp  ModelLoader.hpp  Node.cpp  Node.hpp  loadModel.cpp
Blaze/gltf/: CMakeLists.txt  stb_image_write.h  tiny_gltf.cpp  tiny_gltf.h
Blaze/gui/: CMakeLists.txt  GUI.cpp  GUI.hpp
Blaze/rendering/: ALightCaster.hpp  ARenderer.cpp  ARenderer.hpp  CMakeLists.txt  ForwardRenderer.cpp  ForwardRenderer.hpp  FwdLightCaster.cpp  FwdLightCaster.hpp  FwdRenderer.cpp  FwdRenderer.hpp  Renderer.hpp
Blaze/rendering/deferred/: CMakeLists.txt  DfrLightCaster.cpp  DfrLightCaster.hpp  DfrRenderer.cpp  DfrRenderer.hpp  DirectionLightCaster.cpp  DirectionLightCaster.hpp  PointLightCaster.cpp  PointLightCaster.hpp  SSAO.cpp  SSAO.hpp
Blaze/rendering/forward/: CMakeLists.txt  DirectionLightCaster.cpp  DirectionLightCaster.hpp  FwdLightCaster.cpp  FwdLightCaster.hpp  FwdRenderer.cpp  FwdRenderer.hpp  PointLightCaster.cpp  PointLightCaster.hpp
Blaze/rendering/postprocess/: Bloom.cpp  Bloom.hpp  CMakeLists.txt  HdrTonemap.cpp  HdrTonemap.hpp
Blaze/resource/: CMakeLists.txt  Environment.cpp  Environment.hpp  Model.cpp  Model.hpp  ModelLoader.hpp  Node.hpp
Blaze/shaders/: CMakeLists.txt  fBrdfLut.frag  fDirShadow.frag  fShader.frag  fSkybox.frag  vBrdfLut.vert  vDirShadow.vert  vIrradiance.vert  vIrradianceMultiview.vert  vShader.vert  vShadow.vert  vSkybox.vert
Blaze/shaders/PBR/: fDirectionShadow.frag  fPBR.frag  fPointShadow.frag  vDirectionShadow.vert  vPBR.vert  vPointShadow.vert
Blaze/shaders/deferred/: fDirLighting.frag  fLightVis.frag  fLighting.frag  fMRT.frag  fSSAO.frag  fSSAOBlur.frag  fSSAOFilter.frag  fTransparency.frag  vDirLighting.vert  vLightVis.vert  vLighting.vert  vMRT.vert  vSSAO.vert  vSSAOBlur.vert  vTransparency.vert
Blaze/shaders/env/: fIrradiance.frag  fPrefilter.frag  vIrradiance.vert  vPrefilter.vert
Blaze/shaders/forward/: fDirectionShadow.frag  fPBR.frag  fSkybox.frag  vPBR.vert  vPointShadow.vert  vSkybox.vert
Blaze/shaders/postprocess/: fBloom.frag  fCombine.frag  fHDRTonemap.frag  fHighpass.frag  vPostProcessQuad.vert
Blaze/spirv/: CMakeLists.txt  DescriptorSet.hpp  Pipeline.hpp  PipelineFactory.cpp  PipelineFactory.hpp
Blaze/spirv/shaders/: CMakeLists.txt  fEqvrect2Cube.frag  fPrefilter.frag  fShader.frag  fShadow.frag  fSkybox.frag  vShader.vert  vSkybox.vert
Blaze/spirv/shaders/PBR/: fSkybox.frag  vPBR.vert
Blaze/util/: CMakeLists.txt  DebugTimer.hpp  DeviceSelection.cpp  DeviceSelection.hpp  Environment.cpp  Environment.hpp  Hash.hpp  Managed.hpp  PackedHandler.hpp  ShaderUtils.hpp  createFunctions.cpp  createFunctions.hpp  debug.cpp  debug.hpp  debugMessenger.cpp  debugMessenger.hpp  files.cpp  files.hpp  loaders.hpp  processing.cpp  processing.hpp  shader.cpp  shader.hpp
Blaze/vkwrap/: CMakeLists.txt  VkUtil.hpp  VkWrap.hpp  VkWrapBase.hpp  VkWrapSpecialized.hpp
Blaze/vma/: vk_mem_alloc.cpp
docs/: ARenderer_8hpp_source.html  Bindable_8hpp_source.html  Camera_8hpp_source.html  Context_8hpp_source.html  Datatypes_8hpp_source.html  DebugTimer_8hpp_source.html  Drawable_8hpp_source.html  Environment_8hpp_source.html  ForwardRenderer_8hpp_source.html  FwdRenderer_8hpp_source.html  GUI_8hpp_source.html  LightSystem_8hpp_source.html  Managed_8hpp_source.html  Material_8hpp_source.html  Model2_8hpp_source.html  ModelLoader_8hpp_source.html  Model_8hpp_source.html  PackedHandler_8hpp_source.html  PipelineFactory_8hpp_source.html  Pipeline_8hpp_source.html  Renderer_8hpp_source.html  Swapchain_8hpp_source.html  UniformBuffer_8hpp_source.html  VertexBuffer_8hpp_source.html  VkWrapBase_8hpp_source.html  annotated.html  classDirectionalShadow.html  classPointShadow.html  classblaze_1_1ARenderer-members.html  classblaze_1_1ARenderer.html  classblaze_1_1ARenderer__coll__graph.md5  classblaze_1_1ARenderer__inherit__graph.map  classblaze_1_1ARenderer__inherit__graph.md5  classblaze_1_1BaseUBO-members.html  classblaze_1_1BaseUBO__inherit__graph.map  classblaze_1_1BaseVBO.html  classblaze_1_1BaseVBO__inherit__graph.map  classblaze_1_1BaseVBO__inherit__graph.md5  classblaze_1_1Bindable.html  classblaze_1_1Bindable__inherit__graph.map  (+288 more)
docs/html/: ARenderer_8hpp_source.html  Bindable_8hpp_source.html  Blaze_8hpp_source.html  DescriptorSet_8hpp_source.html  DeviceSelection_8hpp_source.html  Environment_8hpp_source.html  ForwardRenderer_8hpp_source.html  FwdRenderer_8hpp_source.html  LightSystem_8hpp_source.html  Model2_8hpp_source.html  ModelLoader_8hpp_source.html  Node_8hpp_source.html  PackedHandler_8hpp_source.html  PipelineFactory_8hpp_source.html  Pipeline_8hpp_source.html  Primitives_8hpp_source.html  ShadowCaster_8hpp_source.html  Texture2D_8hpp_source.html  TextureCube_8hpp_source.html  UniformBuffer_8hpp_source.html  VertexBuffer_8hpp_source.html  VkWrapSpecialized_8hpp_source.html  VkWrap_8hpp_source.html  (+1847 more)
(+701 files in other folders)
